--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon src/index.js"
+    "dev": "NODE_ENV=dev nodemon src/index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
