--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
     "otplib": "^12.0.1",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
